# Flame

./: .gitignore  CMakeLists.txt  apply_patches.py  git_notes.md  how_it_works.md  how_it_works_ru.md  readme.md  rebuild_patches.py  requirements.txt
libs/: CMakeLists.txt
libs/CImg-3.5.3/: CImg.h  README.txt
libs/CImg-3.5.3/examples/: dtmri_view3d.cpp  spherical_function3d.cpp  tron.cpp
libs/CImg-3.5.3/plugins/: jpeg_buffer.h
libs/CImg-3.5.3/resources/: compile_win_visualcpp.bat
libs/dinput_dll/genlib/: CMakeLists.txt
libs/dkii_exe/: CMakeLists.txt
libs/dkii_exe/delinked/: CMakeLists.txt  stub.cpp
libs/dkii_exe/genlib/: CMakeLists.txt  dkii_stub.cpp
libs/dplay_dll/: CMakeLists.txt
libs/imgui-1.92.3/backends/: imgui_impl_opengl3_loader.h
libs/lzma2/: CMakeLists.txt  Lzma2.cpp  Lzma2.h
libs/qmixer_dll/genlib/: CMakeLists.txt
libs/weanetr_dll/: CMakeLists.txt
libs/weanetr_dll/genlib/: CMakeLists.txt
resources/: CMakeLists.txt  readme.txt  resources.rc.in
resources/DDrawCompat/: download-url.txt
resources/PatchLevels170/: Level10Variables.kld  Level13Variables.kld  Level14Variables.kld  Level15aVariables.kld  Level19Variables.kld  Level20Variables.kld  Level9Variables.kld  download-url.txt  level11AVariables.kld  level11BVariables.kld  level11CVariables.kld  level12Variables.kld  level15bVariables.kld  level18Variables.kld  level5Variables.kld  level7Variables.kld
resources/PatchSoundByQuuz/: MaidenHW.sdt  creature_maidenSFX.map
src/: CMakeLists.txt  dkii_exe_functions.cpp  main.cpp  replace_globals.map  resources.rc.in  window_proc_functions.cpp
src/dk2/: CBridge.cpp  CCamera.cpp  CDefaultPlayerInterface.cpp  CFrontEndComponent.cpp  CGameComponent.cpp  CNetworkCommunication.cpp  CPCEngineInterface.cpp  CRoom.cpp  CWindowTest.cpp  CWorld.cpp  MyCESurfHandle.cpp  MyComputerPlayer.cpp  MyComputerPlayer_drop_condition.cpp  MyComputerPlayer_drop_condition.h  MyCreatureCollection.cpp  MyDxKeyboard.cpp  MyDxMouse.cpp  MyGame.cpp  MyHeap.cpp  MyResources.cpp  MyScaledSurface.cpp  PlayerCfg.cpp  RegKey.cpp  WeaNetR.cpp  cast.h  computer_player_flags.cpp  computer_player_flags.h  dk2_command_line.cpp  dk2_memory.cpp  dk2_memory.h  room_type.h
src/dk2/button/: CClickButton.cpp  CTextInput.cpp  button_functions.cpp  button_types.cpp  button_types.h
src/dk2/engine/: ddraw_functions.cpp  draw_functions.cpp  window_proc_functions.cpp
src/dk2/entities/: CCreature.cpp  CCreatureExtended.cpp  CCreatureExtended.h  CPlayer.cpp  creature_state.h  entities_type.cpp  entities_type.h  object_type.h
src/dk2/gui/: CDefaultPlayerInterface_game_gui.cpp  CGuiManager.cpp  button_render.cpp  main_gui.cpp  visual_debug.cpp  visual_debug.h
src/dk2/gui/game/: game_layout.cpp  game_layout.h  (+2 more)
src/dk2/math/: int_float.cpp  int_float.h
src/dk2/network/: protocol.cpp  protocol.h
src/dk2/surface/: surface_functions.cpp
src/gog_patch_dll/: gog_cfg.cpp  gog_debug.h  gog_exports.cpp  gog_fake.cpp  gog_patch.cpp  gog_patch.h  gog_patch_dll.cpp  sources.cmake
src/gog_patch_dll/fake/: FakeD3D.cpp  FakeD3D2.cpp  FakeD3D3.cpp  FakeDevice3.cpp  FakeDirectDraw1.cpp  FakeDirectDraw2.cpp  FakeDirectDraw4.cpp  FakeGammaControl.cpp  FakeSurface.cpp  FakeSurface4.cpp  FakeTexture.cpp  FakeViewport3.cpp  FakeZBuffer.cpp
src/patches/: auto_network.cpp  auto_network.h  drop_thing_from_hand_fix.cpp  drop_thing_from_hand_fix.h  external_textures.cpp  external_textures.h  flame_main.cpp  flame_main.h  game_version_patch.cpp  game_version_patch.h  inspect_tools.cpp  inspect_tools.h  limit_tps.cpp  limit_tps.h  logging.cpp  logging.h  micro_patches.cpp  micro_patches.h  original_compatible.cpp  original_compatible.h  protocol_dump.cpp  protocol_dump.h  registry_to_config.cpp  registry_to_config.h  remember_window_location_and_size.cpp  remember_window_location_and_size.h  replace_heap.cpp  replace_heap.h  replace_mouse_dinput_to_user32.cpp  replace_mouse_dinput_to_user32.h  scheduler.cpp  scheduler.h  screen_resolution.cpp  screen_resolution.h  show_wireframe.cpp  show_wireframe.h  use_wheel_to_zoom.cpp  use_wheel_to_zoom.h  version_patch.cpp  version_patch.h  (+2 more)
src/patches/big_resolution_fix/: big_resolution_fix.cpp  big_resolution_fix.h  expand_surf_idx_array.cpp  expand_surf_idx_array.h  screen_resolution.cpp
src/patches/gog_patch_dll/: gog_patch.cpp  gog_patch.h  gog_patch_dll.cpp
src/patches/gui/: button_id.h
src/patches/weanetr_dll/: BullfrogNET.cpp  BullfrogNET.h  DPlay.cpp  DPlay.h  DnsResolver.cpp  MLDPlay.cpp  MySocket.cpp  MySocket.h  NetworkServiceProvider.cpp  NetworkServiceProvider.h  globals.cpp  globals.h  logging.h  structs.h  weanetr_memory.h
src/patches/welcome_window/: welcome_window.cpp  welcome_window.h  welcome_window_imgui.h
src/tools/: ExceptionWindow.cpp  ExceptionWindow.h  LoadedModules.cpp  LoadedModules.h  StackLimits.cpp  StackLimits.h  bug_hunter.cpp  bug_hunter.h  command_line.cpp  command_line.h  console.cpp  console.h  flame_config.cpp  flame_config.h  hexdump.hpp  hexdump2.hpp  last_error.cpp  last_error.h  visual_debug.cpp  visual_debug.h  win32_gui_layout.cpp  win32_gui_layout.h
src/tools/bug_hunter/: MyFpoFun.h  MyVersionInfo.cpp  MyVersionInfo.h  StackFrame.cpp  StackFrame.h  StackWalker.cpp  StackWalker.h  StackWalkerIter.cpp  StackWalkerIter.h  StackWalkerState.cpp  StackWalkerState.h  WalkerError.cpp  WalkerError.h
src/weanetr_dll/: BullfrogNET.cpp  DPlay.cpp  DPlay.h  DnsResolver.cpp  DnsResolver.h  MLDPlay.cpp  MLDPlay.h  MySocket.cpp  NetworkServiceProvider.cpp  logging.cpp  messages.h  protocol.h  sources.cmake  structs.h  weanetr.cpp  weanetr.h  weanetr_memory.cpp
tools/devhelper/: CMakeLists.txt  console.cpp  console.h  dev_mouse_dinput_to_user32.cpp  dev_mouse_dinput_to_user32.h  dllmain.cpp  game_version.cpp  game_version.h  mimicry.cpp  mimicry.h  write_protect.h
tools/flame_loader/: CMakeLists.txt  Symbol.cpp  Symbol.h  dependency_injection.cpp  dependency_injection.h  logging.cpp  logging.h  main.cpp  resources.rc.in
tools/msvc_mangler/: CMakeLists.txt  mangler_tests.cpp  msvc_mangler.cpp  msvc_mangler.h
(+193 files in other folders)
