set(TARGET dkii_res)

set(VER_PRODUCT_NUMBER 1)
set(VER_PRODUCT_VERSION 7)
set(VER_BUILD_NUMBER 0)
set(VER_REVISION_NUMBER 0)
set(VER_PROJECT_URL "https://github.com/DiaLight/Flame")

set(DKII_ICON "${CMAKE_CURRENT_LIST_DIR}/packed_icon.ico")
set(VER_COMMENTS "url: ${VER_PROJECT_URL}")
set(VER_FILE_SUFFIX " Flame build")
if(NOT VER_BUILD_NUMBER EQUAL 0)
    string(APPEND VER_FILE_SUFFIX ".${VER_BUILD_NUMBER}")
endif ()
if(CONFIGURE_DATE)
    string(APPEND VER_COMMENTS ", date: ${CONFIGURE_DATE}")
    string(APPEND VER_FILE_SUFFIX " ${CONFIGURE_DATE}")
endif ()
if(GIT_SHA1)
    string(APPEND VER_COMMENTS ", commit: ${GIT_SHA1} ${GIT_DATE} ${GIT_COMMIT_SUBJECT}")
    string(APPEND VER_FILE_SUFFIX " ${GIT_SHORT_SHA1}")
endif ()

string(LENGTH "${VER_COMMENTS}" VER_COMMENTS_LEN)
if(VER_COMMENTS_LEN GREATER_EQUAL 255)
    string(SUBSTRING "${VER_COMMENTS}" 0 252 VER_COMMENTS)
    string(APPEND VER_COMMENTS "...")
endif ()

# https://keeperklan.com/downloads.php?do=file&id=141
install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/PatchLevels170/ DESTINATION Data/editor/maps)

# https://discord.com/channels/480505152806191114/1289590948702982176/1311063368907362466
install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/PatchSoundByQuuz/ DESTINATION Data/Sound/Sfx/Global)

# https://discord.com/channels/480505152806191114/1289590948702982176/1311063421818638396
install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/PatchEditorByQuuz/ DESTINATION Data/editor)

install(FILES "${CMAKE_CURRENT_LIST_DIR}/readme.txt" DESTINATION ".")
